exception handling refactor