@@ -1,10 +1,8 @@
 package com.transport.api.exception;
 
-
 import lombok.Data;
 import org.springframework.http.HttpStatus;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Data
@@ -14,17 +12,9 @@ public class ApiError {
     private String message;
     private List<String> errors;
 
-    public ApiError(HttpStatus status, String message, List<String> errors) {
-        super();
-        this.status = status;
-        this.message = message;
-        this.errors = errors;
-    }
-
     public ApiError(HttpStatus status, String message, String error) {
-        super();
         this.status = status;
         this.message = message;
-        errors = Arrays.asList(error);
+        errors = List.of(error);
     }
 }
